[gd_scene load_steps=7 format=3 uid="uid://dpc14v0tredjf"]

[ext_resource type="Script" path="res://Boundaries/world_base.gd" id="1_ofufs"]
[ext_resource type="Script" path="res://Boundaries/finish_line.gd" id="2_ibdrf"]
[ext_resource type="Texture2D" uid="uid://bqadrpmqfs74j" path="res://Art&Music/Spike_3.png" id="3_bgdum"]
[ext_resource type="Texture2D" uid="uid://bviw62hf4t4je" path="res://Art&Music/Spike_2.png" id="4_33mji"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_tk5vi"]
distance = -87.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3x8uo"]
size = Vector2(69.5, 77.5)

[node name="WorldBase" type="Area2D"]
position = Vector2(54, 961)
script = ExtResource("1_ofufs")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2, 0)
shape = SubResource("WorldBoundaryShape2D_tk5vi")

[node name="FinishLine" type="Area2D" parent="."]
position = Vector2(359, 1003)
script = ExtResource("2_ibdrf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FinishLine"]
position = Vector2(47, -1006)
shape = SubResource("RectangleShape2D_3x8uo")

[node name="ColorRect" type="ColorRect" parent="FinishLine"]
visible = false
offset_left = 24.0
offset_top = -1001.0
offset_right = 75.0
offset_bottom = -961.0
color = Color(0.203922, 1, 0.313726, 1)

[node name="Sprite2D" type="Sprite2D" parent="FinishLine"]
texture_filter = 1
position = Vector2(29, -996)
scale = Vector2(3, 3)
texture = ExtResource("3_bgdum")

[node name="Sprite2D2" type="Sprite2D" parent="FinishLine"]
visible = false
texture_filter = 1
position = Vector2(29, -996)
scale = Vector2(3, 3)
texture = ExtResource("4_33mji")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="game_over" from="." to="." method="_ready"]
[connection signal="body_entered" from="FinishLine" to="." method="_on_finish_line_body_entered"]
